--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2396,7 +2396,7 @@ def calc_max_effective_wind_speed(reaction_intensity):
 def get_phi_S_fn(beta):
     if (beta > 0.0):
         G = 5.275 * beta ** -0.3
-        return lambda slope: (slope ** 2.0) * G if (slope > 0.0) else 0.0
+        return lambda slope: (slope ** 2.0) * G
     else:
         return lambda _: 0.0
 #+end_src
@@ -2408,7 +2408,7 @@ def get_phi_S_fn(beta):
 def get_phi_W_fn(beta, B, C, F):
     if (beta > 0.0):
         C_over_F = C / F
-        return lambda midflame_wind_speed: (midflame_wind_speed ** B) * C_over_F if (midflame_wind_speed > 0.0) else 0.0
+        return lambda midflame_wind_speed: (midflame_wind_speed ** B) * C_over_F
     else:
         return lambda _: 0.0
 #+end_src
